--- a/bookstore-app/k8s/Jenkinsfile
+++ b/bookstore-app/k8s/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
   agent any
   environment {
-    WORKER_IP = '13.232.28.45'
-    DOCKERHUB_IMAGE = 'devopsdecode/bookstore-app:latest'
+    WORKER_IP = '43.205.255.115'
+    DOCKERHUB_IMAGE = 'udayparkar/bookstore-app:latest'
   }
   stages {
     stage('Checkout') { 
@@ -14,7 +14,7 @@ pipeline {
       steps {
         dir('bookstore-app') {
           sh '''
-            sed -i "s|devopsdecode/bookstore-app:local|${DOCKERHUB_IMAGE}|g" k8s/deployment.yaml
+            sed -i "s|udayparkar/bookstore-app:local|${DOCKERHUB_IMAGE}|g" k8s/deployment.yaml
           '''
         }
       }
@@ -23,9 +23,9 @@ pipeline {
       steps {
         dir('bookstore-app') {
           sh '''
-            scp -o StrictHostKeyChecking=no -i ~/.ssh/ci-cd-end-to-end.pem k8s/deployment.yaml ubuntu@${WORKER_IP}:/home/ubuntu/
-            scp -o StrictHostKeyChecking=no -i ~/.ssh/ci-cd-end-to-end.pem k8s/service.yaml ubuntu@${WORKER_IP}:/home/ubuntu/
-            ssh -o StrictHostKeyChecking=no -i ~/.ssh/ci-cd-end-to-end.pem ubuntu@${WORKER_IP} "export KUBECONFIG=/home/ubuntu/kubeconfig && kubectl apply -f deployment.yaml && kubectl apply -f service.yaml"
+            scp -o StrictHostKeyChecking=no -i ~/.ssh/ud_key.pem k8s/deployment.yaml ubuntu@${WORKER_IP}:/home/ubuntu/
+            scp -o StrictHostKeyChecking=no -i ~/.ssh/ud_key.pem k8s/service.yaml ubuntu@${WORKER_IP}:/home/ubuntu/
+            ssh -o StrictHostKeyChecking=no -i ~/.ssh/ud_key.pem ubuntu@${WORKER_IP} "export KUBECONFIG=/home/ubuntu/kubeconfig && kubectl apply -f deployment.yaml && kubectl apply -f service.yaml"
           '''
         }
       }
@@ -33,7 +33,7 @@ pipeline {
     stage('Verify Deployment') {
       steps {
         sh '''
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ci-cd-end-to-end.pem ubuntu@${WORKER_IP} "export KUBECONFIG=/home/ubuntu/kubeconfig && kubectl rollout status deployment/bookstore && kubectl get pods,svc -l app=bookstore"
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ud_key.pem ubuntu@${WORKER_IP} "export KUBECONFIG=/home/ubuntu/kubeconfig && kubectl rollout status deployment/bookstore && kubectl get pods,svc -l app=bookstore"
         '''
       }
     }
